Mon Apr 27 18:11:38 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-there.rb: [BUG#90] thereで一般のオブジェクトを渡すとリファレン
	  スがわたる

Mon Apr 27 17:17:32 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* processor.rb: [SR#87] メッセージ修正
	* log.rb: 上記に伴う機能追加
	* port.rb: [BUG#49]用デバッグコード追加

Mon Apr 27 02:00:52 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy.conf, processor.rb, conf.rb: [SR#87] processorのモニタリン
	  グ機能強化

Fri Apr 24 19:12:25 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy.conf, processor.rb, conf.rb: [SR#87] processorのモニタリン
	  グ機能追加

Fri Apr 24 17:46:10 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* njob.rb: [SR:#86] fairyの内部エラーをクライアントに通知する.

Fri Apr 24 16:18:44 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-barrier.rb, conf.rb: [SR#62]対応 - その5(barrier)

Wed Apr 22 19:28:58 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: [SR#62]対応 - その4(識別性維持要素)

Wed Apr 22 16:57:01 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* tools/git-tag: version.rbのdevブランチ対応

Wed Apr 22 15:58:08 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-local-file-output.rb, b-merge-group_by.rb, bhere.rb,
	  n-barrier.rb, n-direct-product.rb, n-file-output.rb, n-filter.rb,
	  n-join.rb, n-local-file-output.rb, n-zipper.rb, port.rb, conf.rb,
	  log.rb: ログレベル:VERBOSE追加対応

	* controller.rb, master.rb, node.rb, processor.rb: [BUG#85]対応
	* port.rb, conf.rb: CONF.POOLQUEUE_POOL_THRESHOLD追加

Wed Apr 22 13:43:24 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy.conf, logger.rb, n-group-by.rb, port.rb, log.rb,
	  stdout.rb: 0.3.2-008マージ
	* port.rb: [SR#62]対応 - その3(マーシャル可能要素+オンメモリー)

Tue Apr 21 17:38:17 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* log.rb, stdout.rb: [BUG#56]対応
	* logger.rb, log.rb: Loggerにまとめ送りするように対応

Tue Apr 21 15:56:04 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: [SR#62]対応 - その2

Mon Apr 20 19:08:00 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-group-by.rb, port.rb: [BUG#49]用デバッグコード追加05
