@@ -69,6 +69,8 @@ module Fairy
     def_rpath :PROCESSOR_BIN, "processor", :BIN
     def_rpath :LIB, "lib"
 
+    def_prop :CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR
+
     def_prop :PREQUEUING_POLICY
     def_prop :POSTQUEUING_POLICY
     def_prop :POOLQUEUE_POOL_THRESHOLD
@@ -182,10 +184,12 @@ module Fairy
 #  CONF.CONTROLLER_BIN = CONF.BIN+"/controller"
 #  CONF.PROCESSOR_BIN = CONF.BIN+"/processor"
 
+  CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
+
   CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
   CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
   CONF.POOLQUEUE_POOL_THRESHOLD = 1000
-  CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10
+  CONF.ONMEMORY_SIZEDQUEUE_SIZE = 1000
   CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
   CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
