@@ -24,11 +24,17 @@ module Fairy
 ##CONF.CONTROLLER_BIN = CONF.BIN+"/controller"
 ##CONF.PROCESSOR_BIN = CONF.BIN+"/processor"
 
+##CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
+
 ##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
+#CONF.PREQUEUING_POLICY = {:queuing_class => :SizedQueue}
+#  CONF.PREQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 ##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
   CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
+#  CONF.POSTQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 ##CONF.POOLQUEUE_POOL_THRESHOLD = 1000
-##CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10
+##CONF.ONMEMORY_SIZEDQUEUE_SIZE = 1000
+#CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
 ##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
@@ -38,6 +44,7 @@ module Fairy
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
 ##CONF.HASH_MODULE = "fairy/share/hash-md5"
 ##CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
+#CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 ##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
 
 ##CONF.SORT_SAMPLING_MIN = 100
