@@ -1,3 +1,10 @@
+Tue Apr 28 14:53:24 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* controller.rb, conf.rb: [SR#88] GROUP_BYで後段のプロセッサの数を指定できる
+	* port.rb: [BUG#49] FileBufferdQuueueのたまり送り機能追加
+	* processor.rb: [SR#87] オブジェクトがリークしているところを修正
+	* log.rb: [BUG#49] ちょっと修正
+
 Mon Apr 27 18:11:38 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* n-there.rb: [BUG#90] thereで一般のオブジェクトを渡すとリファレン
